doc: Update 'Single Number Evaluation Metric' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
@@ -113,30 +113,40 @@
     "\n",
     "This section emphasizes the critical role of a **single, real-number evaluation metric** in accelerating the iterative process of developing and improving machine learning algorithms.\n",
     "\n",
-    "---\n",
+    "### The Need for a Single Metric\n",
     "\n",
-    "#### The Need for a Single Metric\n",
-    "* **Goal:** A single real-number evaluation metric allows a team to quickly and definitively determine whether a new idea, hyperparameter change, or algorithm modification is better or worse than the previous one.\n",
-    "* **Empirical Process:** Machine learning development is highly empirical (Idea $\\rightarrow$ Code $\\rightarrow$ Experiment $\\rightarrow$ Refine). A single metric speeds up this iterative loop (the \"speed of iteration\").\n",
+    "A single real-number evaluation metric allows a team to quickly and definitively determine whether a new idea, hyperparameter change, or algorithm modification is better or worse than the previous one.\n",
+    "* **Empirical Process:** Machine learning development is highly empirical (Idea $\\rightarrow$ Code $\\rightarrow$ Experiment $\\rightarrow$ Refine). A single metric speeds up this iterative loop.\n",
     "\n",
-    "#### Dealing with Multiple Criteria\n",
+    "### Dealing with Multiple Criteria\n",
     "\n",
-    "* **The Problem:** When using multiple metrics (like Precision and Recall, or error rates across different regions), it becomes difficult to choose between competing classifiers when none of them dominates all metrics.\n",
+    "When using multiple metrics (like Precision and Recall), it becomes difficult to choose between competing classifiers when none of them dominates all metrics.\n",
     "\n",
     "#### Example 1: Precision and Recall\n",
+    "\n",
     "* **Metrics:**\n",
     "    * **Precision (P):** Of the examples identified as positive (e.g., cats), what percentage are correct?\n",
     "    * **Recall (R):** Of all the true positive examples (actual cats), what percentage were correctly identified?\n",
-    "* **Solution:** Combine multiple metrics into a single number.\n",
-    "    * The standard way to combine Precision and Recall is the **F1 Score**.\n",
-    "    * **F1 Score (Harmonic Mean):** $F1 = \\frac{2}{\\frac{1}{P} + \\frac{1}{R}}$ (This averages P and R while favoring high values for both).\n",
+    "* **Solution:** Combine multiple metrics into a single number. The standard way to combine Precision and Recall is the **F1 Score**, which is Harmonic Mean of $P$ and $R$ (This averages P and R while favoring high values for both):\n",
+    "\n",
+    "$$F1 = \\frac{2}{\\frac{1}{P} + \\frac{1}{R}}$$\n",
     "\n",
     "#### Example 2: Error Across Geographies\n",
+    "\n",
     "* **Metrics:** Tracking error rates across multiple markets (e.g., US, China, India, Other).\n",
-    "* **Solution:** Compute a **simple average** of the error rates across all markets. This provides a single number to compare algorithms quickly, assuming average performance is a reasonable proxy for overall success.\n",
+    "* **Solution:** Compute a simple average of the error rates across all markets. This provides a single number to compare algorithms quickly, assuming average performance is a reasonable proxy for overall success.\n",
     "\n",
     "#### Conclusion\n",
+    "\n",
     "A well-defined development (dev) set combined with a single, real-number evaluation metric is essential for efficiently comparing and selecting the best algorithm during the development process."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a84e1df",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
