doc: Update 'Single Number Evaluation Metric' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
@@ -109,7 +109,7 @@
    "id": "4c359a1b-594e-4217-b3da-9bd37df8b595",
    "metadata": {},
    "source": [
-    "### Single Number Evaluation Metric\n",
+    "## Single Number Evaluation Metric\n",
     "\n",
     "This section emphasizes the critical role of a **single, real-number evaluation metric** in accelerating the iterative process of developing and improving machine learning algorithms.\n",
     "\n",
@@ -154,7 +154,7 @@
    "id": "61f685cb-aeb1-4d6e-832a-fa938e91561e",
    "metadata": {},
    "source": [
-    "### Satisficing and Optimizing Metric\n",
+    "## Satisficing and Optimizing Metric\n",
     "\n",
     "This section introduces the concepts of **Optimizing** and **Satisficing** metrics as a practical strategy for evaluating and selecting machine learning models when multiple factors are important and difficult to combine into a single formula.\n",
     "\n",
