doc: Update 'Satisficing and Optimizing Metric' section for clarity.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
@@ -158,29 +158,37 @@
     "\n",
     "This section introduces the concepts of **Optimizing** and **Satisficing** metrics as a practical strategy for evaluating and selecting machine learning models when multiple factors are important and difficult to combine into a single formula.\n",
     "\n",
-    "---\n",
+    "### When to Use\n",
     "\n",
-    "* **When to Use:** This approach is useful when you care about multiple performance metrics (e.g., accuracy, speed, cost) but find it difficult or arbitrary to combine them mathematically (e.g., using a weighted sum).\n",
-    "* **Framework:** If you have $N$ metrics you care about, it's often practical to:\n",
-    "    * Choose one metric to be optimizing.\n",
-    "    * Choose the remaining $N-1$ metrics to be satisficing.\n",
+    "This approach is useful when you care about multiple performance metrics (e.g., accuracy, speed, cost) but find it difficult or arbitrary to combine them mathematically (e.g., using a weighted sum). If you have $N$ metrics you care about, it's often practical to:\n",
+    "* Choose one metric to be optimizing.\n",
+    "* Choose the remaining $N-1$ metrics to be satisficing.\n",
     "\n",
-    "#### 1. Optimizing Metric\n",
-    "* **Definition:** The single metric you wish to maximize (or minimize, depending on the goal). You aim to achieve the best possible performance on this metric.\n",
-    "* **Example (Cat Classifier):** Accuracy (or F1 Score).\n",
+    "### Optimizing Metric\n",
     "\n",
-    "#### 2. Satisficing Metric\n",
-    "* **Definition:** One or more metrics that only need to reach a **\"good enough\" threshold**. Once the threshold is met, further improvement on this metric is not prioritized.\n",
-    "* **Example (Cat Classifier):** **Running Time** must be $\\le 100$ milliseconds.\n",
-    "    * In a set of classifiers, you first filter out any that fail the satisficing criteria.\n",
-    "    * You then select the classifier from the remaining set that has the highest value for the optimizing metric. (E.g., Classifier B maximizes accuracy while still meeting the running time requirement).\n",
+    "The single metric you wish to maximize (or minimize, depending on the goal). You aim to achieve the best possible performance on this metric.\n",
     "\n",
-    "#### Additional Example (Trigger Word Detection)\n",
-    "* **Optimizing Metric:** Accuracy (maximize the chance the device wakes up when the word is spoken).\n",
-    "* **Satisficing Metric:** Number of False Positives (must be $\\le 1$ false positive per 24 hours of operation).\n",
+    "**Example (Cat Classifier):** Accuracy (or F1 Score).\n",
     "\n",
-    "#### Summary\n",
+    "### Satisficing Metric\n",
+    "\n",
+    "One or more metrics that only need to reach a **\"good enough\" threshold**. Once the threshold is met, further improvement on this metric is not prioritized.\n",
+    "\n",
+    "**Example (Cat Classifier):** Running Time must be $\\le 100$ milliseconds.\n",
+    "* In a set of classifiers, you first filter out any that fail the satisficing criteria.\n",
+    "* You then select the classifier from the remaining set that has the highest value for the optimizing metric. (E.g., Classifier B maximizes accuracy while still meeting the running time requirement).\n",
+    "\n",
+    "### Summary\n",
+    "\n",
     "By defining one optimizing metric and one or more satisficing metrics, you create a clear, almost automatic decision rule for quickly selecting the \"best\" algorithm among many choices, thus speeding up the development iteration cycle."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b677d39",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
