doc: Update 'Train/Dev/Test Distributions' section for clarity.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
@@ -196,34 +196,41 @@
    "id": "1a3e8f6c-51f1-421c-b4cf-c5349aff4f32",
    "metadata": {},
    "source": [
-    "### Train/Dev/Test Distributions\n",
+    "## Train/Dev/Test Distributions\n",
     "\n",
     "This section provides crucial advice on setting up development (dev) and test sets to maximize the efficiency and effectiveness of machine learning development, primarily by ensuring they share the same data distribution.\n",
     "\n",
-    "---\n",
+    "### Importance of Setup\n",
     "\n",
-    "#### Key Bullet Points: Setting Up Dev and Test Sets\n",
+    "The way you define your training, development (dev), and test sets significantly impacts how quickly your team can make progress. The *dev set + single real-number evaluation metric* defines the *target* that the team aims for.\n",
     "\n",
-    "##### Importance of Setup\n",
-    "* The way you define your training, development (dev), and test sets significantly impacts how quickly your team can make progress.\n",
-    "* The **dev set + single real-number evaluation metric** defines the **target** or \"bullseye\" that the team aims for.\n",
+    "### Bad Practice: Different Distributions\n",
     "\n",
-    "##### The Problem: Different Distributions\n",
-    "* **Bad Practice:** Using data from distinct regions or populations for the dev set and another for the test set (e.g., US/UK data for dev, China/India data for test).\n",
-    "* **Consequence:** If the dev and test sets come from **different distributions**, the team might spend months optimizing performance for the dev set, only to find the model performs poorly on the test set. This is akin to training for one target and then suddenly being asked to hit a different, unexpected target.\n",
+    "If the dev and test sets come from different distributions, the team might spend months optimizing performance for the dev set, only to find the model performs poorly on the test set. This is akin to training for one target and then suddenly being asked to hit a different, unexpected target.\n",
     "\n",
-    "#### Best Practice: Same Distribution\n",
-    "* **Recommendation:** The **dev set and the test set should come from the same distribution.**\n",
-    "* **Method:** Take all available data (e.g., data from all eight geographic regions, or all income levels) and **randomly shuffle** it before splitting it into dev and test sets.\n",
-    "* **Goal:** Ensure the dev and test sets reflect the **same type of data you expect to encounter and want to perform well on in the future.**\n",
+    "### Best Practice: Same Distribution\n",
     "\n",
-    "#### Real-World Pitfall Example\n",
-    "* A team spent months optimizing a loan approval model using a dev set composed of data from **medium-income postal codes**.\n",
-    "* They later tested the model on data from **low-income postal codes** (a different distribution), and the model failed completely, wasting three months of work.\n",
+    "The dev set and the test set should come from the same distribution. For example:\n",
     "\n",
-    "#### Summary\n",
-    "* The **dev set and the evaluation metric define the target** your team works to hit.\n",
-    "* By ensuring the dev and test sets are drawn from the **same, representative data distribution**, you ensure that optimizing performance on the dev set directly translates to good, expected performance on the test set, leading to much more efficient iteration."
+    "* Take all available data (e.g., data from all eight geographic regions, or all income levels) and **randomly shuffle** it before splitting it into dev and test sets.\n",
+    "* Ensure the dev and test sets reflect the same type of data you expect to encounter and want to perform well on in the future.\n",
+    "\n",
+    "### Real-World Pitfall Example\n",
+    "\n",
+    "A team spent months optimizing a loan approval model using a dev set composed of data from *medium-income postal codes*. They later tested the model on data from *low-income postal codes* (a different distribution), and the model failed completely, wasting three months of work.\n",
+    "\n",
+    "### Summary\n",
+    "\n",
+    "* The dev set and the evaluation metric define the target your team works to hit.\n",
+    "* By ensuring the dev and test sets are drawn from the same, representative data distribution, you ensure that optimizing performance on the dev set directly translates to good, expected performance on the test set, leading to much more efficient iteration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ef310d7",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
