doc: Update 'Size of dev and test sets' section for clarity.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
@@ -238,28 +238,35 @@
    "id": "f9bb2e25-1bf0-49a4-94e8-8e508fc6109c",
    "metadata": {},
    "source": [
-    "### Size of dev and test sets\n",
+    "## Size of dev and test sets\n",
     "\n",
     "This section discusses how the guidelines for splitting data into training, development (dev), and test sets have changed in the deep learning (big data) era, shifting away from traditional percentage splits.\n",
     "\n",
-    "---\n",
+    "### Shift in Data Splitting Rules\n",
     "\n",
-    "#### Key Bullet Points: Sizing Dev and Test Sets\n",
+    "* **Old Rule of Thumb:** In earlier eras with smaller datasets (hundreds to tens of thousands of examples), the common split was *70% Train / 30% Test* or *60% Train / 20% Dev / 20% Test*.\n",
+    "* **Modern Deep Learning Trend:** Due to the large size of modern datasets (e.g., millions of examples) and the high data hunger of deep learning algorithms, the trend is to allocate a much *larger fraction to the training set* and a much *smaller fraction to the dev/test sets*.\n",
     "\n",
-    "##### Shift in Data Splitting Rules\n",
-    "* **Old Rule of Thumb:** In earlier eras with smaller datasets (hundreds to tens of thousands of examples), the common split was **70% Train / 30% Test** or **60% Train / 20% Dev / 20% Test**.\n",
-    "* **Modern Deep Learning Trend:** Due to the large size of modern datasets (e.g., millions of examples) and the high data hunger of deep learning algorithms, the trend is to allocate a much **larger fraction to the training set** and a much **smaller fraction to the dev/test sets**.\n",
+    "### Guidelines for Modern Splitting\n",
     "\n",
-    "##### Guidelines for Modern Splitting\n",
-    "1.  **Training Set (Largest Fraction):** The training set should consume the largest fraction of the data, potentially **98% or more** when dealing with millions of examples.\n",
+    "1.  **Training Set (Largest Fraction):** The training set should consume the largest fraction of the data, potentially *98% or more* when dealing with millions of examples.\n",
     "2.  **Dev Set (Sufficient for Evaluation):** The dev set's purpose is to evaluate different ideas and choose the best algorithm. It needs to be big enough to give confidence in rank-ordering different models (e.g., 1% of 1 million examples, or 10,000 examples, might be sufficient).\n",
     "3.  **Test Set (Sufficient for Final Confidence):** The test set's purpose is to provide an unbiased evaluation of the final system before deployment.\n",
-    "    * It must be **big enough to give high confidence** in the system's overall performance.\n",
-    "    * Similar to the dev set, this size may be far **less than 30%** of the total data (e.g., 1% or 10,000 examples).\n",
+    "    * It must be *big enough to give high confidence* in the system's overall performance.\n",
+    "    * Similar to the dev set, this size may be far *less than 30%* of the total data (e.g., 1% or 10,000 examples).\n",
     "\n",
-    "##### Train/Dev/Test Set vs. Train/Dev Set\n",
+    "### Train/Dev/Test Set vs. Train/Dev Set\n",
+    "\n",
     "* **Ideal Practice:** It is reassuring to maintain a separate test set to get an unbiased estimate of the final system's performance.\n",
     "* **Train/Dev Only:** In some situations, a team might only use a Train/Dev split and not worry about a separate test set, especially if the dev set is very large. However, this is unusual and not generally recommended, as it means the team is optimizing directly to their final evaluation set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdafefa4",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
