doc: Update 'When to change to Dev/Test Sets and Metrics' section for clarity.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
@@ -276,36 +276,46 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "### When to change to Dev/Test Sets and Metrics\n",
+    "## When to change to Dev/Test Sets and Metrics\n",
     "\n",
-    "This section explains that the chosen evaluation metric and development (dev) set are like a **target** for a machine learning team, and if they stop correctly rank-ordering algorithms based on real-world preferences, they must be changed.\n",
+    "This section explains that the chosen evaluation metric and development (dev) set are like a target for a machine learning team, and if they stop correctly rank-ordering algorithms based on real-world preferences, they must be changed.\n",
     "\n",
-    "---\n",
+    "### When to Change the Target\n",
     "\n",
-    "#### Key Bullet Points: Moving the Target (Changing Metrics and Data)\n",
-    "\n",
-    "##### When to Change the Target\n",
     "The core guideline is that if doing well on your current metric and dev/test set does not correspond to doing well on the application you actually care about, change the metric and/or the data.\n",
     "\n",
-    "1.  **Metric Misranks Algorithms (Unacceptable Errors):**\n",
-    "    * **Problem:** An algorithm (A) achieves better performance on the simple classification error metric (e.g., 3% error) but is fundamentally worse because it fails a crucial constraint (e.g., letting through unacceptable content like pornography).\n",
-    "    * **Solution:** Change the Evaluation Metric - Introduce **weighted misclassification error** where unacceptable errors (e.g., mislabeling a pornographic image as a cat) are penalized much more heavily (e.g., a weight of 10x or 100x).\n",
-    "      $$\\text{Error} = \\frac{1}{\\sum_iw^{(i)}}\\sum_i w^{(i)}I(\\hat y^{(i)}, y^{(i)})$$\n",
+    "#### 1. Metric Misranks Algorithms (Unacceptable Errors)\n",
     "\n",
-    "      where $w^{(i)}$ is defined as below:\n",
-    "      $$w^{(i)} = \\begin{cases} 1 & \\text{if } x^{(i)} \\text{ is non-porn} \\\\ 10 & \\text{if } x^{(i)} \\text{ is porn} \\end{cases}$$\n",
+    "* **Problem:** An algorithm (A) achieves better performance on the simple classification error metric (e.g., 3% error) but is fundamentally worse because it fails a crucial constraint (e.g., letting through unacceptable content like pornography).\n",
+    "* **Solution:** Change the Evaluation Metric - Introduce *weighted misclassification error* where unacceptable errors (e.g., mislabeling a pornographic image as a cat) are penalized much more heavily (e.g., a weight of 10x or 100x).\n",
+    "\n",
+    "    $$\\text{Error} = \\frac{1}{\\sum_iw^{(i)}}\\sum_i w^{(i)}I(\\hat y^{(i)}, y^{(i)})$$\n",
+    "\n",
+    "    Where $w^{(i)}$ is defined as below:\n",
+    "    \n",
+    "    $$w^{(i)} = \\begin{cases} 1 & \\text{if } x^{(i)} \\text{ is non-porn} \\\\ 10 & \\text{if } x^{(i)} \\text{ is porn} \\end{cases}$$\n",
     "      \n",
-    "2.  **Dev/Test Set Does Not Reflect Reality (Data Mismatch):**\n",
-    "    * **Problem:** The dev/test set contains high-quality, well-framed images (e.g., downloaded from the internet), but the deployed application uses low-quality, blurry, or poorly framed user-uploaded images. An algorithm that performs better in the real app might perform worse on the high-quality dev set.\n",
-    "    * **Solution:** Change the Dev/Test Set Distribution - Update your evaluation data to better reflect the true distribution of data the algorithm will encounter in production (e.g., include blurrier, less professional photos from the mobile app).\n",
+    "#### 2. Dev/Test Set Does Not Reflect Reality (Data Mismatch)\n",
     "\n",
-    "##### Orthogonalization Principle\n",
-    "* **Target Setting (Step 1):** Defining the metric is a distinct step from achieving good performance on that metric.\n",
-    "* **Aiming and Shooting (Step 2):** After defining the metric, the separate step is figuring out how to do well on it (e.g., changing the neural network's internal cost function, $J$, to align with the new weighted external metric).\n",
+    "* **Problem:** The dev/test set contains high-quality, well-framed images (e.g., downloaded from the internet), but the deployed application uses low-quality, blurry, or poorly framed user-uploaded images. An algorithm that performs better in the real app might perform worse on the high-quality dev set.\n",
+    "* **Solution:** Change the Dev/Test Set Distribution - Update your evaluation data to better reflect the true distribution of data the algorithm will encounter in production (e.g., include blurrier, less professional photos from the mobile app).\n",
     "\n",
-    "#### Final Guidance\n",
+    "### Orthogonalization Principle\n",
+    "\n",
+    "Defining the metric is a distinct step from achieving good performance on that metric. After defining the metric, the separate step is figuring out how to do well on it (e.g., changing the neural network's internal cost function, $J$, to align with the new weighted external metric).\n",
+    "\n",
+    "### Final Guidance\n",
+    "\n",
     "* **Start Quickly:** Don't wait for the \"perfect\" metric or dev set; quickly set something up to start the iteration process. Running without any metric and dev set slows down team efficiency.\n",
     "* **Be Flexible:** It is perfectly acceptable to change the metric and/or data later if you discover a better approach that more accurately captures your application's true performance requirements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d7bc12b",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
