doc: Update 'Why human-level performance?' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
@@ -323,28 +323,27 @@
    "id": "e7497f9b-57ca-489a-b72d-e510b518bdfe",
    "metadata": {},
    "source": [
-    "### Why human-level performance?\n",
+    "## Why human-level performance?\n",
     "\n",
     "This section explains that **Human-Level Performance (HLP)** serves as a crucial estimate for the **Bayes Optimal Error** (the theoretically lowest possible error rate) and is essential for properly diagnosing whether a model's poor performance is due to **high bias** or **high variance**.\n",
     "\n",
-    "---\n",
+    "### Human-Level Error as a Proxy for Bayes Error\n",
     "\n",
-    "#### Key Bullet Points: Human-Level Performance and Error Analysis\n",
-    "\n",
-    "##### 1. Human-Level Error as a Proxy for Bayes Error\n",
     "* **Bayes Optimal Error (Bayes Error):** The lowest possible theoretical error rate for any classifier on a given dataset. You cannot perform better than this without overfitting.\n",
     "* **Human-Level Performance (HLP):** For tasks humans are very good at (like computer vision), HLP is a reasonable, practical proxy or estimate for the Bayes Error.\n",
-    "* **Goal:** The ultimate goal is to reach or closely approach the Bayes Error. You should avoid reducing training error below the Bayes Error, as this likely leads to overfitting.\n",
     "\n",
-    "##### 2. Decomposing Error: Avoidable Bias vs. Variance\n",
+    "The ultimate goal is to reach or closely approach the Bayes Error. You should avoid reducing training error below the Bayes Error, as this likely leads to overfitting.\n",
+    "\n",
+    "### Decomposing Error: Avoidable Bias vs. Variance\n",
+    "\n",
     "The comparison between HLP, Training Error, and Dev Error determines the focus of improvement:\n",
     "\n",
     "| Error Component | Calculation | Problem Type | Tactics to Reduce |\n",
     "| :--- | :--- | :--- | :--- |\n",
-    "| **Avoidable Bias** | $\\text{Training Error} - \\text{HLP (Bayes Error estimate)}$ | High Bias (Underfitting) | Train a bigger network, run longer training, try a better optimization algorithm. |\n",
-    "| **Variance** | $\\text{Dev Error} - \\text{Training Error}$ | High Variance (Overfitting) | Apply regularization**, get more training data. |\n",
+    "| **Avoidable Bias** | Training Error - HLP (Bayes Error estimate) | High Bias (Underfitting) | Train a bigger network, run longer training, try a better optimization algorithm. |\n",
+    "| **Variance** | Dev Error - Training Error | High Variance (Overfitting) | Apply regularization, get more training data. |\n",
     "\n",
-    "##### 3. Impact of HLP on Strategy (Example Comparison)\n",
+    "### Impact of HLP on Strategy (Example Comparison)\n",
     "\n",
     "| Scenario | HLP (Bayes Error Est.) | Training Error | Dev Error | Avoidable Bias | Variance | Focus |\n",
     "| :--- | :--- | :--- | :--- | :--- | :--- | :--- |\n",
@@ -353,10 +352,16 @@
     "\n",
     "In Case 2, reducing the training error below 7.5% offers little theoretical benefit and risks overfitting, so efforts shift to reducing the variance gap.\n",
     "\n",
-    "#### Accuracy Improvement Over Time\n",
+    "### Accuracy Improvement Over Time\n",
     "\n",
     "![Human Level Performance](images/hlp.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "109a9563",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
