doc: Update 'Why human-level performance' section for clarity.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
@@ -323,7 +323,7 @@
    "id": "e7497f9b-57ca-489a-b72d-e510b518bdfe",
    "metadata": {},
    "source": [
-    "## Why human-level performance?\n",
+    "## Why human-level performance and avoidable error?\n",
     "\n",
     "This section explains that **Human-Level Performance (HLP)** serves as a crucial estimate for the **Bayes Optimal Error** (the theoretically lowest possible error rate) and is essential for properly diagnosing whether a model's poor performance is due to **high bias** or **high variance**.\n",
     "\n",
@@ -361,7 +361,9 @@
    "cell_type": "markdown",
    "id": "109a9563",
    "metadata": {},
-   "source": []
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
