doc: Add 'Improving your model performance' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-3/notebooks/week1.ipynb
@@ -456,6 +456,61 @@
    "cell_type": "markdown",
    "id": "c1a669ff",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00772470",
+   "metadata": {},
+   "source": [
+    "## Improving your model performance\n",
+    "\n",
+    "This section summarizes the comprehensive strategy for improving supervised learning models, emphasizing the principle of **orthogonalization** by targeting either **avoidable bias** or **variance**.\n",
+    "\n",
+    "### The Two Fundamental Goals\n",
+    "\n",
+    "Getting a supervised learning algorithm to work well requires achieving two things, each addressed by a separate set of tools:\n",
+    "\n",
+    "1.  **Low Avoidable Bias (Fitting):** The ability to fit the training set well (i.e., the training error must be close to the Bayes error estimate).\n",
+    "2.  **Low Variance (Generalization):** The ability for performance on the training set to generalize well to the unseen development (dev) and test sets.\n",
+    "\n",
+    "### Error Analysis and Diagnostic Gaps\n",
+    "\n",
+    "The first step in improvement is diagnosis, using the Human-Level Error (HLE) as a proxy for Bayes Error:\n",
+    "\n",
+    "| Gap | Calculation | Indicates | Primary Focus |\n",
+    "| :--- | :--- | :--- | :--- |\n",
+    "| **Avoidable Bias** | Training Error - Bayes Error Proxy (HLE) | How much better the model should be performing on the training data. | **Bias Reduction** |\n",
+    "| **Variance** | Dev Error - Training Error | How much the model is overfitting and failing to generalize. | **Variance Reduction** |\n",
+    "\n",
+    "### Tactics for Reducing Avoidable Bias (Fitting the Training Set)\n",
+    "\n",
+    "If the **Avoidable Bias** gap is large, focus on strategies that increase the model's capacity or training efficiency:\n",
+    "\n",
+    "* **Model Capacity:** Train a bigger neural network (more layers, more hidden units).\n",
+    "* **Optimization:** Train longer or use a better optimization algorithm (e.g., Adam, RMSprop, or momentum).\n",
+    "* **Architecture Search:** Find a better neural network architecture or hyperparameters (e.g., changing activation functions, trying RNNs/CNNs for suitable problems).\n",
+    "\n",
+    "### Tactics for Reducing Variance (Generalizing to Dev Set)\n",
+    "\n",
+    "If the **Variance** gap is large, focus on strategies that constrain the model or provide more diverse data:\n",
+    "\n",
+    "* **Data Size:** Get more data to train on, which naturally helps generalization.\n",
+    "* **Regularization:** Apply regularization techniques (e.g., L2 regularization, Dropout).\n",
+    "* **Data Augmentation:** Use techniques like data augmentation (which can also be seen as a form of regularization).\n",
+    "* **Architecture Search:** Again, try different neural network architectures/hyperparameters that might be inherently better suited for generalization.\n",
+    "\n",
+    "### Orthogonalization Principle\n",
+    "\n",
+    "The entire strategy is built on **orthogonalization**: using a specific set of tools to address a specific issue (bias or variance) without significantly affecting the other issue, leading to a systematic and efficient way to improve the machine learning system."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9bb3cca",
+   "metadata": {},
    "source": []
   }
  ],
